<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_home"
    android:enabled="true"
    android:icon="@drawable/home"
    android:title="@string/home"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_orders"
    android:enabled="true"
    android:icon="@drawable/orders"
    android:title="@string/orders"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_product"
    android:enabled="true"
    android:icon="@drawable/product"
    android:title="@string/products"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_manage"
    android:enabled="true"
    android:icon="@drawable/manage"
    android:title="@string/manage"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_account"
    android:enabled="true"
    android:icon="@drawable/account"
    android:title="@string/account"
    app:showAsAction="ifRoom" />
</menu>