<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="com.akshay.homepage.ui.main.MainViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="70dp"
      android:layout_marginEnd="16dp"
      android:elevation="8dp"
      app:cardElevation="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
          android:id="@+id/share_title"
          style="@style/ItemTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share_more_to_earn_more"
          android:textColor="@color/black"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/share_message"
          style="@style/ItemSubTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:text="@string/share_message"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/share_title" />

        <TextView
          android:id="@+id/share_link"
          style="@style/ItemSubTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share_link"
          android:textColor="@color/link"
          app:layout_constraintBottom_toBottomOf="@+id/imageView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
          android:id="@+id/imageView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:src="@drawable/share"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/share_message" />

        <TextView
          android:id="@+id/textView"
          style="@style/ItemSubTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="14dp"
          android:background="@drawable/share_bubble"
          android:paddingStart="16dp"
          android:paddingTop="6dp"
          android:paddingEnd="16dp"
          android:paddingBottom="6dp"
          android:text="@string/get_your_own_custom_domain"
          android:textColor="@color/purple_500"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/share_link" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:theme="@style/AppTheme.AppBarOverlay"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        style="@style/ItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/toolbar_title"
        android:textColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
      android:id="@+id/fragment_container_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
      app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/card" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottom_navigation"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:labelVisibilityMode="labeled"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:menu="@menu/menu_bottom_navigation" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>